apps/shaadimubarak/envs/development/api-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: shaadimubarak-api
spec:
  template:
    spec:
      containers:
        - name: shaadimubarak-api
