apps/shaadimubarak/envs/development/web-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: shaadimubarak-web
spec:
  template:
    spec:
      containers:
        - name: shaadimubarak-web
